--- a/src/component/chatbox/chatbox.css
+++ b/src/component/chatbox/chatbox.css
@@ -14,11 +14,12 @@
   }
   
 .chat-box {
-    width: 300px;
+    width: 400px;
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 10px;
-    background-color: brown;
+    height: auto;
+    background-color: rgba(34, 23, 184, 0.477);
   }
   
   .message-list {
@@ -32,6 +33,8 @@
   border-radius: 4px;
   background-color: #e0f7fa;
   align-self: flex-end;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .bot-message {
@@ -40,14 +43,15 @@
   border-radius: 4px;
   background-color: #b3e0f2;
   align-self: flex-start;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
-.update{
-  
-}
+
   .input-container {
     display: flex;
     margin-top: 10px;
+    
   }
   
   .input-styles {
@@ -56,11 +60,23 @@
     padding: 8px;
     border-radius: 4px;
     border: 1px solid #ccc;
+    font-size: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
   }
   
   .button-styles {
     padding: 8px;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
+    color: rgba(141, 28, 28, 0.763);
+    font-size: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition: all 0.3s;
+    border: 2px solid rgba(34, 23, 184, 0.477);
+  }
+  .button-styles:hover{
+    color: #000000;
+    /* background-color:  #6183ba8e; */
   }
   
