--- a/src/component/dropbox/dropbox.css
+++ b/src/component/dropbox/dropbox.css
@@ -1,18 +1,47 @@
-.dropzone{
+.dropzone {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: 2px dashed #aaa;
-    width: 250px;
+    width: 200px;
     border-radius: 4px;
-    padding:0px;
+    padding: 25px;
     text-align: center;
     cursor: pointer;
-    height: 250px;
+    height: 180px;
     position: relative;
-    margin :10px;
+    margin: 10px;
     color: white;
     background-color: #374151;
+    z-index: 16; /* Set a higher z-index for the main dropzone */
+    font-size: 1.2rem;
 }
+.dropbox-btn{
+    width: 90px;
+    height: 25px;
+    margin: 10px 10px;
+    border-radius: 20px;
+    cursor: pointer;
+    border: 1px dotted black;
+    background-color: rgb(255, 255, 255);
+    transition: background-color 0.5s ease-in-out;
+}
+.dropbox-btn:hover{
+    background-color: rgb(99, 77, 77);
+}
+.dropzone img {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.crop-section {
+    position: static;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
+  }
 .dragzone-text{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
     /* border: 2px solid red; */
     height: 100%;
     width: 100%;
@@ -21,6 +50,29 @@
     justify-content: center;
     flex-direction: column;
     position: absolute;
+    top: 0px;
+    left: 0px;
+}
+.after-crop{
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+}
+.cropped-box{
+    /* border: 2px solid red; */
+    width: 100%;
+    height: 90%;
+    margin: 5px 5px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cropped-box>img{
+    width: 100%;
+    height: 100%;
+    /* border: 2px dotted blue; */
 }
 .more-style{
     width: 100%;
@@ -38,6 +90,7 @@
     background-color: #374151;
 }
 .image-holder{
+    position: relative;
     object-fit: contain;
     max-width: 90%;
     max-height: 80%;
@@ -51,6 +104,6 @@
     font-size: 2rem;
     position: absolute;
     top: 0px;
-    right: 0px;
+    right: 3px;
     margin: 0px;
 }
