--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 500px;
-    width: 700px;
-    background-color: #0b0f19;
+    height: 70vh;
+    width: 95vw;
+    background-color: #0b0f19e6;
+    border: 2px dotted white;
+    border-radius: 4%;
 }
